Update contact details, global office locations, and social media links

--- a/src/App.css
+++ b/src/App.css
@@ -1939,6 +1939,10 @@ img {
   background: #0a66c2;
 }
 
+.social-x {
+  background: #000000;
+}
+
 .footer-links-col h5 {
   font-size: 16px;
   font-weight: 700;
