--- a/src/App.css
+++ b/src/App.css
@@ -722,12 +722,11 @@ img {
   max-width: 80%;
   max-height: 80%;
   object-fit: contain;
-  filter: grayscale(1);
-  transition: filter 0.3s ease;
+  transition: transform 0.3s ease;
 }
 
 .client-circle-item:hover img {
-  filter: grayscale(0);
+  transform: scale(1.1);
 }
 
 .client-emoji {
